--- a/src/sample/punyan/messenger.fxml
+++ b/src/sample/punyan/messenger.fxml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.TextFlow?>
-<fx:root fx:id="nodeVBox" alignment="CENTER" spacing="4" type="javafx.scene.layout.VBox"
-         xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="nodeVBox" alignment="CENTER" spacing="4" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
 
         <HBox spacing="4">
-            <TextField fx:id="textFieldOutput" onAction="#sendFromTextField" HBox.hgrow="ALWAYS"/>
-            <Button mnemonicParsing="false" onAction="#sendFromTextField" text="Send"/>
+            <children>
+                <TextField fx:id="textFieldOutput" onAction="#sendFromTextField" HBox.hgrow="ALWAYS"/>
+                <Button mnemonicParsing="false" onAction="#sendFromTextField" text="Send"/>
+            </children>
         </HBox>
 
         <AnchorPane VBox.vgrow="ALWAYS">
-            <ScrollPane fx:id="scrollPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
-                <TextFlow fx:id="textFlow"/>
-            </ScrollPane>
+            <children>
+                <ScrollPane fx:id="scrollPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
+                    <content>
+                        <TextFlow fx:id="textFlow"/>
+                    </content>
+                </ScrollPane>
 
-            <HBox alignment="TOP_RIGHT" layoutY="104.0" spacing="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                <Button opacity="0.5" text="Clean" onAction="#clear"/>
-                <padding>
-                    <Insets right="20.0" top="4.0"/>
-                </padding>
-            </HBox>
+                <HBox alignment="CENTER" layoutY="104.0" spacing="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <children>
+                        <CheckBox fx:id="checkBoxScroll" selected="true" text="auto scroll"/>
+                        <Button onAction="#clear" opacity="0.5" text="Clean"/>
+                    </children>
+                    <padding>
+                        <Insets right="20.0" top="4.0"/>
+                    </padding>
+                </HBox>
+            </children>
         </AnchorPane>
 
     </children>
