--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -1,56 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.input.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.*?>
-
 <BorderPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
     <top>
         <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Close" />
+                        <MenuItem mnemonicParsing="false" text="Close"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Connection">
                     <items>
                         <RadioMenuItem mnemonicParsing="false" text="Wi-Fi">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="W" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="W" control="ANY" meta="UP" shift="UP" shortcut="UP"/>
                             </accelerator>
                             <toggleGroup>
-                                <ToggleGroup fx:id="toggleGroupConnectionType" />
+                                <ToggleGroup fx:id="toggleGroupConnectionType"/>
                             </toggleGroup>
                         </RadioMenuItem>
-                        <RadioMenuItem mnemonicParsing="false" selected="true" text="Serial" toggleGroup="$toggleGroupConnectionType">
+                        <RadioMenuItem mnemonicParsing="false" selected="true" text="Serial"
+                                       toggleGroup="$toggleGroupConnectionType">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="S" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="S" control="ANY" meta="UP" shift="UP" shortcut="UP"/>
                             </accelerator>
                         </RadioMenuItem>
-                        <SeparatorMenuItem mnemonicParsing="false" />
-                        <Menu fx:id="menuBaudRate" mnemonicParsing="false" text="Baudrate" />
-                        <Menu fx:id="menuSerialPort" mnemonicParsing="false" text="Serial port" />
-                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <SeparatorMenuItem mnemonicParsing="false"/>
+                        <Menu fx:id="menuBaudRate" mnemonicParsing="false" text="Baudrate"/>
+                        <Menu fx:id="menuSerialPort" mnemonicParsing="false" text="Serial port"/>
+                        <SeparatorMenuItem mnemonicParsing="false"/>
                         <MenuItem fx:id="menuItemConnect" mnemonicParsing="false" onAction="#connect" text="Connect">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="O" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="O" control="ANY" meta="UP" shift="UP" shortcut="UP"/>
                             </accelerator>
                         </MenuItem>
-                        <MenuItem fx:id="menuItemDisconnect" mnemonicParsing="false" onAction="#disconnect" text="Disconnect">
+                        <MenuItem fx:id="menuItemDisconnect" mnemonicParsing="false" onAction="#disconnect"
+                                  text="Disconnect">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="D" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="D" control="ANY" meta="UP" shift="UP" shortcut="UP"/>
                             </accelerator>
                         </MenuItem>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem mnemonicParsing="false" text="About"/>
                     </items>
                 </Menu>
             </menus>
@@ -62,13 +60,12 @@
             <tabs>
                 <Tab text="Messenger">
                     <content>
-                        <sample.Messenger fx:id="messenger" />
+                        <sample.Messenger fx:id="messenger"/>
                     </content>
                 </Tab>
-                <Tab fx:id="tabMap" text="Map" />
-                <Tab text="Test">
+                <Tab text="Compass">
                     <content>
-                        <sample.Stick fx:id="stick" maxHeight="320" maxWidth="320" />
+                        <sample.view.CompassView fx:id="compass" prefWidth="480" prefHeight="480"/>
                     </content>
                 </Tab>
             </tabs>
@@ -78,8 +75,8 @@
     <bottom>
         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
-                <Label text="Connection status:" />
-                <Label fx:id="labelConnectionStatus" text="not connected" />
+                <Label text="Connection status:"/>
+                <Label fx:id="labelConnectionStatus" text="not connected"/>
             </items>
         </ToolBar>
     </bottom>
@@ -89,41 +86,48 @@
             <children>
                 <GridPane hgap="4.0" vgap="4.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints vgrow="NEVER" />
-                        <RowConstraints vgrow="NEVER" />
-                        <RowConstraints vgrow="NEVER" />
-                        <RowConstraints vgrow="NEVER" />
-                        <RowConstraints vgrow="NEVER" />
-                        <RowConstraints vgrow="NEVER" />
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
                     </rowConstraints>
                     <children>
-                        <Button fx:id="buttonForward" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Forward" GridPane.columnIndex="1" />
-                        <Button fx:id="buttonLeft" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Left" GridPane.rowIndex="1" />
-                        <Button fx:id="buttonStop" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Stop" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button fx:id="buttonRight" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Right" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <Button fx:id="buttonBackward" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Backward" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Slider fx:id="sliderAzimuth" majorTickUnit="10.0" max="360.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnSpan="3" GridPane.rowIndex="4" />
+                        <Button fx:id="buttonForward" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                text="Forward" GridPane.columnIndex="1"/>
+                        <Button fx:id="buttonLeft" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Left"
+                                GridPane.rowIndex="1"/>
+                        <Button fx:id="buttonStop" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Stop"
+                                GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                        <Button fx:id="buttonRight" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                text="Right" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+                        <Button fx:id="buttonBackward" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                text="Backward" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                        <Slider fx:id="sliderAzimuth" majorTickUnit="10.0" max="360.0" minorTickCount="0"
+                                showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnSpan="3"
+                                GridPane.rowIndex="4"/>
                     </children>
                 </GridPane>
-                <Separator prefWidth="200.0" />
-            <HBox spacing="4.0">
-               <children>
-                  <Label text="Lifetime:" />
-                  <Label fx:id="labelLifetime" text="0:00:000" />
-                   <Label text="Free memory:" />
-                   <Label fx:id="labelFreeMemory" text="0" />
-               </children>
-            </HBox>
-                <Separator prefWidth="200.0" />
-                <sample.view.CompassView fx:id="compass" />
+                <Separator prefWidth="200.0"/>
+                <HBox spacing="4.0">
+                    <children>
+                        <Label text="Lifetime:"/>
+                        <Label fx:id="labelLifetime" text="0:00:000"/>
+                        <Label text="Free memory:"/>
+                        <Label fx:id="labelFreeMemory" text="0"/>
+                    </children>
+                </HBox>
+                <Separator prefWidth="200.0"/>
+                <sample.view.Stick fx:id="stick" prefHeight="320" prefWidth="320"/>
             </children>
             <padding>
-                <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                <Insets bottom="4.0" left="4.0" right="4.0" top="4.0"/>
             </padding>
         </VBox>
     </right>
